<resources>
    <string name="app_name">App Ngon Ngu</string>
    <string name="txt_infomaiton">User Information</string>
    <string name="txt_userName">User Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_address">Addrees</string>
    <string name="txt_phone">Phone Number</string>
    <string name="btn_confirm">Confirm</string>
    <string name="text_hello">Hello</string>
    <string name="text_email">Email</string>
    <string name="text_address">Address</string>
    <string name="text_phone">Phone Number</string>
</resources>
