<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:gravity="center"
            android:id="@+id/txtInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="#E91E63"
            android:text="@string/txt_infomaiton" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:paddingLeft="10dp"
            android:inputType="textPersonName"
            android:hint="@string/txt_userName" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:paddingLeft="10dp"
            android:hint="@string/txt_email"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:paddingLeft="10dp"
            android:inputType="textPersonName"
            android:hint="@string/txt_address" />
        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:paddingLeft="10dp"
            android:hint="@string/txt_phone"
            android:inputType="phone" />
        <Button
            android:id="@+id/btnConfirm"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm"/>
        <TextView
            android:gravity="center"
            android:id="@+id/txtUserInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>